# cvte_robot

./: .gitmodules  README.md
cvte_robot_bringup/cvte_robot_base/: CMakeLists.txt  cvte_robot_base.cpp  package.xml
cvte_robot_bringup/cvte_robot_bringup/: CMakeLists.txt  package.xml
cvte_robot_bringup/cvte_robot_bringup/launch/: bringup.launch
cvte_robot_ir_charge/: CMakeLists.txt  package.xml
cvte_robot_ir_charge/include/: auto_charge.hpp
cvte_robot_ir_charge/src/: auto_charge.cpp  charge.cpp
cvte_robot_navigation/: CMakeLists.txt  package.xml
cvte_robot_navigation/launch/: amcl.launch  cvte_robot_navigation.launch  move_base.launch
cvte_robot_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml
cvte_robot_slam/: CMakeLists.txt  package.xml
cvte_robot_slam/launch/: cvte_robot_gmapping.launch
docs/: 0.机器人基本介绍.md  1.环境搭建与编译.md  2.机器人底盘运行.md  3.构建地图.md  4.机器人导航.md  README.md
