<?xml version="1.0"?>
<package>
  <name>cvte_robot_ir_charge</name>
  <version>1.0.0</version>
  <description>ir charge</description>
  <maintainer email="linyufeng@cvte.com">cvte robot</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
