<?xml version="1.0"?>
<package>
  <name>cvte_robot_base</name>
  <version>1.0.0</version>
  <description>tf and odom publish</description>
  <maintainer email="linyufeng@cvte.com">cvte robot</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
</package>
