<?xml version="1.0"?>
<package>
  <name>cvte_robot_bringup</name>
  <version>1.0.0</version>
  <description>bringup the base</description>
  <maintainer email="linyufeng@cvte.com">cvte robot</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>
